--- a/templates/pages/playlists.html.twig
+++ b/templates/pages/playlists.html.twig
@@ -34,6 +34,11 @@
                     </form>            
                 </th>
                 <th class="text-center align-top" scope="col">
+                    formations par playlist<br />
+                    <a href="{{ path('playlists.sort', {champ:'amount', ordre:'ASC'}) }}" class="btn btn-info btn-sm active" role="button" aria-pressed="true"><</a>
+                    <a href="{{ path('playlists.sort', {champ:'amount', ordre:'DESC'}) }}" class="btn btn-info btn-sm active" role="button" aria-pressed="true">></a>
+                </th>
+                <th class="text-center align-top" scope="col">
                     &nbsp;
                 </th>				
             </tr>
@@ -55,7 +60,12 @@
                                     &nbsp;{{ categories[c] }}                                  
                                 {% endfor %}
                             {% endif %}
-                        </td>            					
+                        </td>
+                        <td>
+                            <h5 class="text-center">
+                                {{ playlists[k].formations|length}} {{ (playlists[k].formations|length) > 1 ? 'formations' : 'formation' }}
+                            </h5>
+                        </td>
                         <td class="text-center">
                             <a href="{{ path('playlists.showone', {id:playlists[k].id}) }}" class="btn btn-secondary">Voir détail</a>
                         </td> 					
