--- a/templates/baseadmin.html.twig
+++ b/templates/baseadmin.html.twig
@@ -4,6 +4,9 @@
 {% block stylesheets %}{% endblock %}
 {% block top %}
     <div class="container">
+         <div class="text-end">
+            <a href="{{ path('logout') }}" class="link-dark">se déconnecter ➜</a>
+        </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
