--- a/templates/baseadmin.html.twig
+++ b/templates/baseadmin.html.twig
@@ -4,11 +4,9 @@
 {% block stylesheets %}{% endblock %}
 {% block top %}
     <div class="container">
-         <div class="text-end">
-            <a href="{{ path('logout') }}" class="link-dark">se déconnecter ➜</a>
-        </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('admin.formations') }}">Formations</a>
@@ -20,6 +18,9 @@
                         <a class="nav-link" href="{{ path('admin.categories')}}">Catégories</a>
                     </li>                    
                 </ul>
+            </div>
+            <div class="text-end">
+            <a href="{{ path('logout') }}" class="text-decoration-none text-info">Se déconnecter‎&nbsp&nbsp</a>
             </div>
         </nav>        
     </div>
