erreur commit author test + dernière révision

--- a/templates/CategorieForm.html.twig
+++ b/templates/CategorieForm.html.twig
@@ -6,7 +6,7 @@
             <br>
             <br />
             <br />
-            {{ form_row(formCategorie.submit, {'attr': {'onclick': 'return confirm(Veuillez confirmer")'}}) }}
+            {{ form_row(formCategorie.submit, {'attr': {'onclick': 'return confirm("Veuillez confirmer")'}}) }}
         </div>
             {{ form_end(formCategorie) }}
             {% if categorie.id != null %}
