--- a/templates/PlaylistForm.html.twig
+++ b/templates/PlaylistForm.html.twig
@@ -6,6 +6,6 @@
             <br>
             {{ form_row(formPlaylist.formations, {'attr': {'size': 25}, 'label': 'Formation(s)'}) }}
             <br>
-            {{ form_row(formPlaylist.submit, {'attr': {'onclick': 'return confirm(Veuillez confirmer")'}}) }}
+            {{ form_row(formPlaylist.submit, {'attr': {'onclick': 'return confirm("Veuillez confirmer")'}}) }}
         </div>
     {{ form_end(formPlaylist) }}
